tests/snapshots/wire_contract__envelope_stale.snap
---
source: tests/wire_contract.rs
expression: round_trip(&stale)
---
{
  "data": {
    "current": {
      "temperature": 71.3,
      "weathercode": 2,
      "condition": "PartlyCloudy",
      "windspeed": 8.5,
      "humidity": 54,
      "feels_like": 69.8,
      "wind_direction": 305,
      "compass_direction": "NW",
      "wind_gusts": 12.4,
      "uv_index": 6.5,
      "visibility": 24135.0,
      "pressure": 1015.2,
      "cloud_cover": 40,
      "dew_point": 52.7
    },
    "hourly": [
      {
        "time": "2026-06-11T10:00",
        "temperature": 71.3,
        "weathercode": 2,
        "condition": "PartlyCloudy",
        "precipitation_probability": 20,
        "precipitation": 0.1,
        "windspeed": 8.5,
        "wind_gusts": 12.4
      }
    ],
    "forecast": [
      {
        "date": "2026-06-11",
        "temp_max": 78.4,
        "temp_min": 58.1,
        "weathercode": 3,
        "condition": "Overcast",
        "windspeed_max": 14.2,
        "wind_direction": 305,
        "compass_direction": "NW",
        "precipitation_probability_max": 30,
        "sunrise": "2026-06-11T05:21",
        "sunset": "2026-06-11T20:29"
      }
    ],
    "utc_offset_seconds": -14400
  },
  "fetched_at": "2026-06-11T13:50:00Z",
  "error": {
    "kind": "Timeout",
    "message": "request timed out",
    "at": "2026-06-11T14:20:00Z"
  }
}
