tests/snapshots/wire_contract__saved_location.snap
---
source: tests/wire_contract.rs
expression: json(&v)
---
{
  "name": "Home",
  "latitude": 45.5152,
  "longitude": -122.6784
}
