tests/snapshots/wire_contract__wire_error_Dbus.snap
---
source: tests/wire_contract.rs
expression: round_trip(&wire)
---
{
  "kind": "Dbus",
  "message": "D-Bus error: name lost"
}
