tests/snapshots/wire_contract__wire_error_HttpClient.snap
---
source: tests/wire_contract.rs
expression: round_trip(&wire)
---
{
  "kind": "HttpClient",
  "message": "failed to build HTTP client: tls backend not initialized"
}
