tests/snapshots/wire_contract__wire_error_HttpStatus.snap
---
source: tests/wire_contract.rs
expression: round_trip(&wire)
---
{
  "kind": "HttpStatus",
  "message": "http status 429"
}
