tests/snapshots/wire_contract__wire_error_LocationDetection.snap
---
source: tests/wire_contract.rs
expression: round_trip(&wire)
---
{
  "kind": "LocationDetection",
  "message": "location detection failed"
}
