tests/snapshots/wire_contract__wire_error_Network.snap
---
source: tests/wire_contract.rs
expression: round_trip(&wire)
---
{
  "kind": "Network",
  "message": "network error: connect"
}
