tests/snapshots/wire_contract__wire_error_NoResults.snap
---
source: tests/wire_contract.rs
expression: round_trip(&wire)
---
{
  "kind": "NoResults",
  "message": "no results"
}
